docs: 更新 jvm 参数